@@ -1,9 +1,10 @@
 /*
  * PluginManager.java - Plugin manager window
- * :tabSize=8:indentSize=8:noTabs=false:
+ * :tabSize=4:indentSize=4:noTabs=false:
  * :folding=explicit:collapseFolds=1:
  *
- * Copyright (C) 2002 Kris Kopicki
+ * Copyright (C) 2002-2012 Slava Pestov, Matthieu Casanova, Kris Kopicki,
+ 	Shlomy Reinstein, Alan Ezust
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License
@@ -31,7 +32,12 @@ import java.awt.*;
 import org.gjt.sp.jedit.EditBus.EBHandler;
 import org.gjt.sp.jedit.msg.*;
 import org.gjt.sp.jedit.options.*;
+import org.gjt.sp.jedit.pluginmgr.PluginList.Branch;
+import org.gjt.sp.jedit.pluginmgr.PluginList.Dependency;
+import org.gjt.sp.jedit.pluginmgr.PluginList.Plugin;
 import org.gjt.sp.jedit.*;
+import org.gjt.sp.util.Log;
+import org.gjt.sp.util.StandardUtilities;
 import org.gjt.sp.util.Task;
 import org.gjt.sp.util.ThreadUtilities;
 //}}}
@@ -41,7 +47,7 @@ import org.gjt.sp.util.ThreadUtilities;
  */
 public class PluginManager extends JFrame
 {
-	
+
 	//{{{ getInstance() method
 	/**
 	 * Returns the currently visible plugin manager window, or null.
@@ -161,7 +167,7 @@ public class PluginManager extends JFrame
 	private void init()
 	{
 		EditBus.addToBus(this);
-		
+
 
 		/* Setup panes */
 		JPanel content = new JPanel(new BorderLayout(12,12));
@@ -268,9 +274,76 @@ public class PluginManager extends JFrame
 				});
 			}
 		});
+
+
+
 	} //}}}
 
-	//{{{ processKeyEvent() method
+	//{{{ checkForObsoletePlugins()
+	/** Checks for obsolete plugins, and marks them as unsupported.
+	 *  <p>
+	 *  An obsolete plugin branch can be marked as inactive, or
+	 *  an individual release can have a max jEdit version that is 
+	 *  lower than the running version. If no later version/branch exists
+	 *  that supports this jEdit version, the plugin is unsupported.
+	 * @since jEdit 5.0pre1
+	 * @author Alan Ezust
+	 */
+	public void checkForObsoletePlugins()
+	{
+		if ((pluginList == null) || (pluginList.plugins == null)) return;
+		// for each plugin that is installed
+		for (PluginJAR jar: jEdit.getPluginJARs())
+		{
+			EditPlugin eplugin = jar.getPlugin();
+			if (eplugin == null) continue;
+			String installedVersion = jEdit.getProperty("plugin." + eplugin.getClassName() + ".version");
+			// find corresponding entry in pluginList
+			for (Plugin plugin: pluginList.plugins)
+				if (MiscUtilities.pathsEqual(plugin.jar, MiscUtilities.getFileName(jar.getPath())))
+				{
+					// find the latest branch with version greater than or equal to installedVersion
+					Branch lastBranch = null;
+					String latestVersion = "";
+					for (Branch branch: plugin.branches)
+					{
+						// found a branch greater or equal to our own version:
+						if (StandardUtilities.compareStrings(branch.version, installedVersion, false) >= 0) 
+							if (StandardUtilities.compareStrings(branch.version, latestVersion, false) >= 0) 
+							{
+								latestVersion = branch.version;
+								lastBranch = branch;
+							}
+						
+					}
+					if (lastBranch != null) 
+						if (lastBranch.obsolete) disablePlugin(jar, plugin.name);	
+						else for (Dependency dep: lastBranch.deps)
+							// if there is a max jedit version, check if we're higher:
+							if (dep.what.equals("jedit") && (dep.to != null))
+								if (StandardUtilities.compareStrings(jEdit.getBuild(), dep.to, false) > 0)
+									disablePlugin(jar, plugin.name);
+					
+				}
+		}
+	} //}}}
+
+	//{{{ disablePlugin()
+	private void disablePlugin(PluginJAR jar, String name) 
+	{
+		Log.log(Log.ERROR, this, "Plugin: " + name + 
+			" is not supported on this version of jEdit! ");
+		if (!jEdit.getBooleanProperty("plugin-manager.disable-obsolete", true)) return;
+		jEdit.removePluginJAR(jar,false);
+		String jarName = MiscUtilities.getFileName(jar.getPath());
+		// Stop it from getting loaded:
+		jEdit.setBooleanProperty("plugin-blacklist."+ jarName, true);
+		// show as 'Unsupported' in Manage Panel:
+		jEdit.setBooleanProperty("plugin." + jarName + ".disabled", true);
+		jEdit.propertiesChanged();		
+	}//}}}
+	
+	//{{{ pluginListUpdated() method
 	private void pluginListUpdated()
 	{
 		Component selected = tabPane.getSelectedComponent();
@@ -279,6 +352,7 @@ public class PluginManager extends JFrame
 			installer.updateModel();
 			updater.updateModel();
 		}
+		checkForObsoletePlugins();
 	} //}}}
 
 	//{{{ processKeyEvent() method
